<resources>
    <string name="app_name">My Builder</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="title_information">Information</string>
    <string name="google_icon">google icon</string>
    <string name="default_country_text">*Select country</string>
    <string name="default_region_text">*Select city or region</string>
    <string name="default_state_text">*Select state</string>
    <string name="tv_address">%1$s, %2$s, %3$s</string>
    <string name="tv_feedback_count">%1$d\nFeedbacks</string>
    <string name="add_address">Add your address</string>
    <string name="add_description">Write about yourself</string>
    <string name="add_portfolio">Add your portfolio</string>
    <string name="add_profession">Add your profession</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: buringisina qaytarip qoyiw kerek default_web_client_id -->
    <string name="default_web_client_id_2" translatable="false">301225272177-n789b4g3bhs00s0s5f3f0e9rihiukqjm.apps.googleusercontent.com</string>
    <string name="describe">Describe your experience (optional)</string>
    <string name="sign_up_in_with_google">Sign up/in with Google</string>
    <string name="the_better_way_nto_find_a_builder">The better way \nto find a builder</string>

    <string name="app_title">Stfalcon Image Viewer</string>

    <string name="action_images_grid">Images Grid</string>
    <string name="action_scroll">Transitions on scroll</string>
    <string name="action_style">Styled view</string>
    <string name="action_rotation">Rotation support</string>

    <string name="description_images_grid">A simple demo of the viewer usage. The fastest way to implement.</string>
    <string name="description_scroll">A sample of open and close transition in case of usage inside the vertical or horizontal scroll container</string>
    <string name="action_description_styled_view">Playground with configurable options for viewer styling. Overlay view, custom margins, padding etc.</string>
    <string name="description_rotation_support">Example of how to handle activity rotation.</string>

    <string name="check_out">Check out</string>

    <string name="message_on_dismiss">The viewer has been dismissed!</string>

    <string name="scroll_me_horizontally">Scroll me\nhorizontally</string>
    <string name="scroll_me_vertically">Scroll me\nvertically</string>

    <string-array name="styling_options">
        <item>hide status bar</item>
        <item>images margin</item>
        <item>container padding</item>
        <item>transitions</item>
        <item>swipe-to-dismiss</item>
        <item>zooming</item>
        <item>show overlay</item>
        <item>random background</item>
    </string-array>
</resources>