<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="uz.texnopos.mybuilderapp.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_tradeFragment"
            app:destination="@id/tradeFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="uz.texnopos.mybuilderapp.ui.main.favorites.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_information"
        android:name="uz.texnopos.mybuilderapp.ui.main.information.InformationFragment"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_information" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="uz.texnopos.mybuilderapp.ui.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/tradeFragment"
        android:name="uz.texnopos.mybuilderapp.ui.main.trades.TradeFragment"
        android:label="fragment_trade"
        tools:layout="@layout/fragment_trade" >
        <action
            android:id="@+id/action_tradeFragment_to_singleBuilderFragment"
            app:destination="@id/singleBuilderFragment" />
    </fragment>
    <fragment
        android:id="@+id/singleBuilderFragment"
        android:name="uz.texnopos.mybuilderapp.ui.main.builder.SingleBuilderFragment"
        android:label="fragment_single_builder"
        tools:layout="@layout/fragment_single_builder" />
</navigation>